2007-06-19  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/server/exmpp_server_sasl.erl (next_step),
	src/server/exmpp_server_session.erl (want_establishment),
	src/server/exmpp_server_binding.erl (wished_resource): Return an error
	if the given stanza is unexpected. If the argument isn't an
	#xmlnselement{}, it still raises a function clause EXIT.

	* src/server/exmpp_server_binding.erl (error): Add the
	`not-authorized' case.

	* src/core/exmpp_stream.erl, src/server/exmpp_server_stream.erl,
	src/client/exmpp_client_stream.erl: Add helpers to access common
	attributes.

	* src/core/exmpp_xml.erl: Add functions to prepend one or more
	children to a given element's children.

	* m4/ax_compare_version.m4: New M4 macro to compare version numbers in
	a configure script.

	* configure.ac: Updated the required autoconf version to 2.60 (for
	official Erlang support). Removed directives which were never used
	and already commented out. Check Erlang kernel's version to
	automatically enable or disable erl_ddll workaround. Check for sed(1).

	* doc/Makefile.am: Documentation is now rebuilt only if one of the
	source files is updated. Add `erlang.png' to the CLEANFILES. Add the
	correct encoding to every HTML documents with sed(1).

2007-05-15  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/server/exmpp_server_compression.erl (methods_list2),
	src/server/exmpp_server_sasl.erl (mechanisms_list2): Verify if the
	given argument is an authentic string.

	* src/core/exmpp_sup.erl: Do not use supervisor:start/3 because it
	never existed. Spotted by Dialyzer.

2007-05-04  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/core/exmpp_xml.erl: Unlink port before stopping it. This
	prevents an 'EXIT' message sent to the port owner.

	* doc/overview.edoc: Nano update of the application overview.

2007-04-20  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* doc/Makefile.am: Fixed documentation build: the new sources layout